<resources>
    <string name="app_name">Trash Network - Recycle</string>
    <string name="recycle_point_format">Recycle Point %d</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="account">Account</string>
    <string name="other">Other</string>
    <string name="action_logout">Logout</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_credit_rank">Credit Rank</string>
    <string name="action_credit_record">Credit Record</string>
    <string name="action_recycle_record">Recycle Record</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="action_exit">Exit</string>

    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="normal_user">Normal User</string>
    <string name="garbage_collector">Garbage Collector</string>
    <string name="error_illegal_phone_number">Illegal phone number</string>
    <string name="error_illegal_password_length">Password is too long or too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_illegal_email">Illegal email</string>
    <string name="response_data_corrupt">Received data has corrupted, please try again</string>
    <string name="network_error">Network unavailable or connection timeout</string>
    <string name="unknown_error">Unknown error</string>
    <string name="server_internal_error">Remote server internal error</string>
    <string name="alert_waiting">Please wait…</string>
    <string name="alert_session_expired">Session has expired, please avatarlogin again.</string>
    <string name="alert_click_avatar_login">Click avatar to login</string>
    <string name="alert_logout">Are you sure to logout?</string>
    <string name="error">Error</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_confirm">Confirm</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>

    <string name="your_location">Your Location</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="credit_format">Credit: %d</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>

    <string name="action_about">About</string>
    <string name="app_version_format">Version: %s</string>
    <string name="open_source_license">Open source license</string>

    <string name="no_record">No record</string>
    <string name="no_feedback">No feedback</string>
    <string name="anonymous_user">Anonymous user</string>
    <string name="alert_loading">Loading…</string>
    <string name="alert_press_again_to_exit">Press again to exit</string>
    <string name="action_new_feedback">New Feedback</string>
    <string name="alert_login_first">Please login first</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="alert_location_outdate">Your location info has been outdated,
        please try again after your location is updated.</string>
    <string name="gain_credit_format">You have gained %d credits in total.</string>
    <string name="gain_credit_red_packet_format">Lucky! You have gained a red packet of %d credits.</string>
    <string name="action_recycle_bottle">Recycle Bottle</string>
    <string name="bottle">Bottle</string>

    <string name="daily_rank">Daily Rank</string>
    <string name="weekly_rank">Weekly Rank</string>
    <string name="tip_you_not_in_rank">You are not in the rank list</string>
    <string name="update_time_format">Last update: %s</string>
    <string name="no_rank">No rank</string>
    <string name="tip_your_rank_format"><![CDATA[Your rank: <font color="red">%d</font>]]></string>

    <string name="distance">Distance</string>
    <string name="distance_meter_format">%.1fm</string>
    <string name="time">Time</string>
    <string name="time_elapse_min_sec_format" formatted="false">%dmin %dsec</string>

    <string name="tip_scan_qrcode">Place a QR code inside the viewfinder rectangle to scan it</string>
    <string name="alert_error_open_camera">Unable to open camera</string>

    <string name="action_event">Event</string>
    <string name="no_event">No event</string>
    <string name="action_open_with_browser">Open with browser</string>
    <string name="action_refresh">Refresh</string>

    <string name="setting_delivery_address">Delivery address</string>
    <string name="action_choose_address">Choose address</string>
    <string name="action_new_address">New Address</string>
    <string name="action_edit_address">Edit Address</string>
    <string name="setting_modify_password">Modify password</string>
    <string name="txt_default">Default</string>
    <string name="no_address">No address</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="alert_delete">Are you sure to delete?</string>

    <string name="action_credit_mall">Credit Mall</string>
    <string name="commodity_credit_format">%d Credits</string>
    <string name="action_commodity_detail">Commodity Detail</string>
    <string name="no_commodity">No commodity</string>
    <string name="action_search">Search</string>
    <string name="action_exchange_now">Exchange Now</string>
    <string name="stock_format">Stock: %d</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="click_to_reload">Click to reload</string>

    <string name="action_order">Order</string>
    <string name="no_order">No order</string>
    <string name="credit_total_format" formatted="false">%d x %d = %d Credits</string>

    <string-array name="order_status">
        <item>In progress</item>
        <item>Delivering</item>
        <item>Cancelled</item>
        <item>Finished</item>
        <item>All</item>
    </string-array>

    <string name="action_submit_order">Submit Order</string>
    <string name="action_submit">Submit</string>
    <string name="credit">Credit</string>
    <string name="total_credit">Total credit</string>
    <string name="note_maximum_format">(Maximum: %d)</string>
    <string name="bill">Bill</string>
    <string name="remark">Remark</string>
    <string name="note_optional">(Optional)</string>
    <string name="credit_balance">Credit balance</string>
    <string name="stock">Stock</string>
    <string name="error_illegal_quantity">Illegal quantity</string>
    <string name="error_quantity_exceed_limit">Quantity exceeds limit</string>
    <string name="error_no_delivery_address">Please choose a delivery address</string>
    <string name="action_order_detail">Order Detail</string>
    <string name="order">Order</string>
    <string name="order_id">Order ID</string>
    <string name="commodity">Commodity</string>
    <string name="status">Status</string>
    <string name="submit_time">Submit time</string>
    <string name="delivery_info">Delivery info</string>
    <string name="delivery_company">Delivery company</string>
    <string name="waybill_id">Waybill ID</string>
</resources>
