<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/action_map" />
        <item
            android:id="@+id/nav_credit_record"
            android:icon="@drawable/ic_history"
            android:title="@string/action_credit_record" />
        <item
            android:id="@+id/nav_credit_rank"
            android:icon="@drawable/ic_sort_descending"
            android:title="@string/action_credit_rank" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/action_feedback" />
    </group>

    <group android:id="@+id/nav_group_other"
        android:checkableBehavior="none">
        <item android:id="@+id/nav_scan_qrcode"
            android:icon="@drawable/ic_scanqrcode"
            android:title="@string/action_scan_qr_code"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"/>

        <item android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/action_exit"/>
    </group>

</menu>
