<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:layout_marginBottom="@dimen/item_padding"
                app:met_textColorHint="@color/grey_500"
                app:met_underlineColor="@color/grey_500"
                app:met_primaryColor="@color/colorAccent"
                app:met_floatingLabelText="@string/name"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_clearButton="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                app:met_maxCharacters="15"
                app:met_textColorHint="@color/grey_500"
                app:met_underlineColor="@color/grey_500"
                app:met_primaryColor="@color/colorAccent"
                app:met_floatingLabelText="@string/phone_number"
                app:met_floatingLabel="highlight"
                app:met_clearButton="true"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:imeOptions="actionDone"
                app:met_textColorHint="@color/grey_500"
                app:met_underlineColor="@color/grey_500"
                app:met_primaryColor="@color/colorAccent"
                app:met_floatingLabelText="@string/address"
                app:met_floatingLabel="highlight"
                app:met_clearButton="true"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>