<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="happyyoung.trashnetwork.recycle.ui.activity.SubmitOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_submit">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/item_padding">

            <TextView
                android:id="@+id/txt_commodity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_padding"
                android:text="IPhone 8"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text_size" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/item_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding"
                        android:text="@string/bill"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/small_text_size" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/credit_balance"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/txt_user_credit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:text="8 Credits"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/normal_text_size" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/credit"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/txt_commodity_credit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:text="8 Credits"
                            android:textColor="@color/red_500"
                            android:textSize="@dimen/normal_text_size" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/stock"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/txt_commodity_stock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:text="998"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/normal_text_size" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding_small">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/quantity"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/normal_text_size" />

                            <TextView android:id="@+id/txt_hint_maximum_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/note_maximum_format"
                                android:textSize="@dimen/small_text_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/btn_minus"
                                style="@style/AppTheme.ImageButton"
                                android:layout_width="@dimen/normal_icon_size"
                                android:layout_height="@dimen/normal_icon_size"
                                android:layout_marginStart="@dimen/item_padding"
                                android:tint="@color/red_500"
                                app:srcCompat="@drawable/ic_remove" />

                            <EditText
                                android:id="@+id/edit_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:inputType="number"
                                android:minEms="3"
                                android:text="1" />

                            <ImageButton
                                android:id="@+id/btn_plus"
                                style="@style/AppTheme.ImageButton"
                                android:layout_width="@dimen/normal_icon_size"
                                android:layout_height="@dimen/normal_icon_size"
                                android:layout_marginStart="@dimen/item_padding"
                                android:tint="@color/light_green_500"
                                app:srcCompat="@drawable/ic_add" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/total_credit"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/txt_total_credit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:text="@string/commodity_credit_format"
                            android:textColor="@color/red_500"
                            android:textSize="@dimen/normal_text_size" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/address_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_padding"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/item_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_delivery_address"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding"
                        android:text="(Click to change)"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/txt_no_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:drawableStart="@drawable/ic_info_outline_32dp"
                        android:gravity="center"
                        android:text="@string/no_address"
                        android:textSize="@dimen/normal_text_size" />

                    <LinearLayout
                        android:id="@+id/address_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/item_padding_small"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/item_padding"
                                android:tint="@color/indigo_500"
                                app:srcCompat="@drawable/ic_person" />

                            <TextView
                                android:id="@+id/txt_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Shengyun Zhou"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/normal_text_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/item_padding_small"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/item_padding"
                                android:tint="@color/teal_500"
                                app:srcCompat="@drawable/ic_phone" />

                            <TextView
                                android:id="@+id/txt_phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="123456"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/normal_text_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/item_padding_small"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/item_padding"
                                android:tint="@color/cyan_500"
                                app:srcCompat="@drawable/ic_home" />

                            <TextView
                                android:id="@+id/txt_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="BUPT"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/normal_text_size" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/item_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remark"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/item_padding"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_remark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_optional"
                        android:imeOptions="actionDone"
                        app:met_textColorHint="@color/grey_500"
                        app:met_underlineColor="@color/grey_500"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_clearButton="true"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/item_padding"
        android:paddingBottom="@dimen/large_button_padding"
        android:paddingTop="@dimen/large_button_padding"
        android:text="@string/action_submit" />

</RelativeLayout>
